apps/staff-service/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nh-staff-service
  labels:
    name: nh-staff-service
