apps/staff-service/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service
  namespace: nh-staff-service
  labels:
    app: staff-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: staff-service
  template:
    metadata:
      labels:
        app: staff-service
    spec:
      containers:
        - name: staff-service
          image: nexus-staff-service:1.0-early
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5008
              name: http
